# ZKvsAI

./: .gitignore  ARCHITECTURE_CORRECTIONS.md  CLAUDE.md  CORRECTIONS_SUMMARY.md  Cargo.toml  PROJECT_STATUS.md  README.md  pyproject.toml
.claude/agents/: nockapp-developer.md
docs/: ARCHITECTURE.md  ARCHITECTURE_REVISED.md  DOCUMENT_SCHEMA.md  GETTING_STARTED.md  HELLO_WORLD_PROTOTYPE.md  JOCK_EVALUATION.md
nockapp/: Cargo.toml  nockapp.toml
nockapp/hoon/: verifier.hoon
nockapp/src/: main.rs
python/zkrag/: __init__.py  cli.py  documents.py  embeddings.py  proof.py  rag.py  vector_store.py  verifier.py
rust/bindings/: Cargo.toml
rust/bindings/src/: lib.rs
rust/circuits/: Cargo.toml
rust/circuits/src/: document_query.rs  lib.rs  utils.rs
rust/prover/: Cargo.toml
rust/prover/src/: lib.rs  witness.rs
rust/verifier/: Cargo.toml
rust/verifier/src/: lib.rs
samples/: README.md
samples/documents/: credit_card.json  drivers_license.json  passport.json
