[workspace]
members = [
    "rust/circuits",
    "rust/prover",
    "rust/verifier",
    "rust/bindings",
]
resolver = "2"

[workspace.dependencies]
# ZK Proof Systems
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = "0.4"
ark-serialize = "0.4"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rand = "0.8"
hex = "0.4"
base64 = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
