[package]
name = "zkrag-verifier-nockapp"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NockApp (when available)
# nockup = { git = "https://github.com/nockchain/nockchain", features = ["nockup"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
