[package]
name = "zkrag-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-serialize = { workspace = true }

# Circuit-specific
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
