[package]
name = "zkrag-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
zkrag-circuits = { path = "../circuits" }
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Key caching
dirs = "5.0"

[dev-dependencies]
rand = { workspace = true }
